created grid for home page, and added images

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -80,7 +80,7 @@
            <img src="/assets/images/products/yam flour.png" alt="">
         </aside>
     </section>
-    <main>
+    <main class="container">
         <section class="video-play">
             <div>
                 <h3>From a complete natural source</h3>
@@ -92,6 +92,17 @@
                 <img src="/assets/images/play-img.svg" alt="" class="play-btn">
                 <!-- <img src="/assets/images/video-placeholder.png" alt=""> -->
 
+            </div>
+        </section>
+        <section class="grid">
+            <div class="first-grid">
+                 <img src="/assets/images/home-grid/creekers-tin.png" alt="">
+            </div>
+            <div class="second-grid">
+                <img src="/assets/images/home-grid/Snack.png" alt="">
+            </div>
+            <div class="third-grid">
+               <img src="/assets/images/home-grid/beans.png" alt="">
             </div>
         </section>
     </main>
