shop button added

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -105,6 +105,11 @@
                <img src="/assets/images/home-grid/beans.png" alt="">
             </div>
         </section>
+        <div class="shop-btn">
+            <a href="#" class="btn btn-shop">
+                Shop
+            </a>
+        </div>
     </main>
 
 
