added about words on home page

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -83,8 +83,8 @@
     <main class="container">
         <section class="video-play">
             <div>
-                <h3>From a complete natural source</h3>
-                <p>
+                <h3 class="h3-display">From a complete natural source</h3>
+                <p class="desc-words">
                     Our products are completely natural and directly form the farm.
                 </p>
             </div>
@@ -110,6 +110,14 @@
                 Shop
             </a>
         </div>
+        <section class="about-ess">
+            <article>
+                <h3>About Essentials</h3>
+                <p class="desc-words">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at velit nibh. Nunc convallis ante ut venenatis semper. Donec auctor<br /> velit non dictum malesuada. In maximus pharetra risus, sed imperdiet eros laoreet quis. Vivamus sem leo, pellentesque a arcu in, <br />egestas interdum leo. Suspendisse pellentesque auctor libero sed tempus. Aliquam erat volutpat. Nam congue accumsan libero nec sodales.
+                </p>
+            </article>
+        </section>
     </main>
 
 
