fixed overflow issue

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -90,8 +90,6 @@
             </div>
             <div class="video">
                 <img src="/assets/images/play-img.svg" alt="" class="play-btn">
-                <!-- <img src="/assets/images/video-placeholder.png" alt=""> -->
-
             </div>
         </section>
         <section class="grid">
@@ -114,7 +112,7 @@
             <article>
                 <h3>About Essentials</h3>
                 <p class="desc-words">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at velit nibh. Nunc convallis ante ut venenatis semper. Donec auctor<br /> velit non dictum malesuada. In maximus pharetra risus, sed imperdiet eros laoreet quis. Vivamus sem leo, pellentesque a arcu in, <br />egestas interdum leo. Suspendisse pellentesque auctor libero sed tempus. Aliquam erat volutpat. Nam congue accumsan libero nec sodales.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at velit nibh. Nunc convallis ante ut venenatis semper. Donec auctor<br /> velit non dictum malesuada. <span class="hide-sm">In maximus pharetra risus, sed imperdiet eros laoreet quis. Vivamus sem leo, pellentesque a arcu in, <br />egestas interdum leo. Suspendisse pellentesque auctor libero sed tempus. Aliquam erat volutpat. Nam congue accumsan libero nec sodales.</span>
                 </p>
             </article>
         </section>
