--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -35,7 +35,7 @@
                       <a href="#">Store</a>
                   </li>
                   <li>
-                      <a href="#">About Us</a>
+                      <a href="/assets/pages/about.html">About Us</a>
                   </li>
                   <li>
                       <a href="#">Contact Us</a>
