--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <span></span>
             </li>
                <li><a href="/assets/pages/home.html">Home</a></li>
-               <li><a href="#">About Us</a></li>
                <li><a href="/assets/pages/products.html">Store</a></li>
+               <li><a href="/assets/pages/about.html">About Us</a></li>
                <li><a href="/assets/pages/explore.html">Contact Us</a></li>
                <li class="account"><a href="#">
                    <span>
