added boilerplate for about page

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -96,13 +96,16 @@
             </div>
         </section>
         <section class="grid">
-            <div class="first-grid" data-aos="fade-down" data-aos-easing="linear">
+            <div class="first-grid" >
+                <!-- data-aos="fade-down" data-aos-easing="linear" -->
                  <img src="/assets/images/home-grid/creekers-tin.png" alt="">
             </div>
-            <div class="second-grid" data-aos="fade-up" data-aos-easing="linear">
+            <div class="second-grid" >
+                <!-- data-aos="fade-up" data-aos-easing="linear" -->
                 <img src="/assets/images/home-grid/Snack.png" alt="">
             </div>
-            <div class="third-grid" data-aos="fade-up" data-aos-easing="linear">
+            <div class="third-grid" >
+                <!-- data-aos="fade-up" data-aos-easing="linear" -->
                <img src="/assets/images/home-grid/beans.png" alt="">
             </div>
         </section>
