added boilerplate for about page

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -213,7 +213,7 @@
        <!-- <img src="/assets/images/profile-img/chevron-right.png" alt="" class="chevron-right">
          <img src="/assets/images/profile-img/chevron-left.png" alt="" class="chevron-left"> -->
    </section>
-   <footer data-aos="fade-up" data-aos-easing="linear">
+   <footer data-aos="fade-up">
     <section class="footer-top">
      <div class="footer-logo">
        <img src="/assets/images/footer-logo.png" alt="">
