--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
     
     <link rel="stylesheet" href="/assets/styles/indexHome.css"> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="/assets/styles/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -265,7 +265,7 @@
     </div>
 </footer>
 <script src="/assets/script/jquery.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 <script src="/assets/script/slick.js"></script>
 <script src="/assets/script/index.js"></script>
 </body>
