adjusted image shadow

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -39,6 +39,7 @@
             transform: translate(-50%,-50%);
             font-size: 70px;
             color: #fff;
+            transition: all 0.2s ease-in;
         }
         .shop-btn{
             margin: 30px 0;
