--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -32,7 +32,7 @@
                       <a href="#">Home</a>
                   </li>
                   <li>
-                      <a href="#">Store</a>
+                      <a href="/assets/pages/store.html">Store</a>
                   </li>
                   <li>
                       <a href="/assets/pages/about.html">About Us</a>
@@ -223,14 +223,11 @@
           <a href="/index.html">Home</a>
         </li> 
         <li>
-         <a href="#">Store</a>
+         <a href="/assets/pages/store.html">Store</a>
         </li>
         <li>
-         <a href="/assets/pages/products.html">About Us</a>
+         <a href="/assets/pages/about.html">About Us</a>
         </li>
-        <!-- <li>
-         <a href="/assets/pages/explore.html">Explore Creekers</a>
-        </li> -->
         <li>
          <a href="#">Contact Us</a>
         </li>
