--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -19,35 +19,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Essential Foods</title>
     <link rel="stylesheet" href="/assets/styles/home.css">
-    <style>
-         section .h3-display, .desc-words{
-            text-align: left;
-            margin: 20px 0;
-        }
-        .about-banner{
-            height: 400px;
-            background: url('/assets/images/about/about-banner.png');
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-        }
-        .about-banner h1{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-            font-size: 70px;
-            color: #fff;
-            transition: all 0.2s ease-in;
-        }
-        .shop-btn{
-            margin: 30px 0;
-        }
-        @media screen and (max-width:760px){
-
-        }
-    </style>
+    <link rel="stylesheet" href="/assets/styles/store.css">
 </head>
 <body>
     <header class="" >
@@ -61,10 +33,10 @@
                       <a href="/assets/pages/home.html">Home</a>
                   </li>
                   <li>
-                      <a href="/assets/pages/store.html">Store</a>
+                      <a href="#">Store</a>
                   </li>
                   <li>
-                      <a href="#">About Us</a>
+                      <a href="/assets/pages/about.html">About Us</a>
                   </li>
                   <li>
                       <a href="#">Contact Us</a>
@@ -92,32 +64,27 @@
         </nav>
     </header>
     <main>
-       <section class="about-banner">
-            <h1>
-                About Us
-            </h1>
-       </section>
-       <section class="container">
-            <h3 class="h3-display">
-                We are an online food-mart
-            </h3>
-            <p class="desc-words">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, ante id  lobortis, 
-                odio risus finibus tortor, at tincidunt nunc ante ut orci. Etiam sit amet dui lacus.
-                 Quisque ornare, est sit amet ullamcorper venenatis, felis eros interdum enim, ut vestibulum elit diam sed est. 
-                In auctor dui nec ante ultrices, et euismod odio varius. Aliquam vitae eros nec ante volutpat facilisis. Morbi sem purus,
-                 tempor vitae rutrum id, tincidunt nec tellus. Donec finibus, nunc eget efficitur ornare, sem libero consequat velit, vel rutrum turpis lorem et erat. Integer augue sem, bibendum at venenatis ut, sagittis ut turpis. Nam euismod semper tellus a condimentum. Quisque sed lorem vel nisl finibus mattis ac quis est. Fusce placerat nisl id risus hendrerit varius. Mauris non maximus quam, in lobortis massa. Aenean at felis nisi. Donec neque velit, aliquam non sem ac, lobortis.
-            </p>
-       </section>
+      <section class="store-slide">
+          <div class="store-div">
+              <img src="/assets/images/store/yam flour.png" alt="">
+          </div>
+          <div class="store-div">
+            <img src="/assets/images/store/cray fish.png" alt="">
+        </div>
+        <div class="store-div">
+            <img src="/assets/images/store/palmoil.png" alt="">
+        </div>
+        <div class="store-div">
+            <img src="/assets/images/store/yam flour.png" alt="">
+        </div>
+        <div class="store-div">
+            <img src="/assets/images/store/cray fish.png" alt="">
+        </div>
+      </section>
+      <section>
+          <h3 class="h3-display">store</h3>
+      </section>
     </main>
-    <div class="shop-btn" >
-        <aside>
-            
-        </aside>
-        <!-- <a href="#" class="btn btn-explore">
-            Explore
-        </a> -->
-    </div>
    <footer >
     <section class="footer-top">
      <div class="footer-logo">
@@ -128,7 +95,7 @@
           <a href="/index.html">Home</a>
         </li> 
         <li>
-         <a href="/assets/pages/store.html">Store</a>
+         <a href="#">Store</a>
         </li>
         <li>
          <a href="/assets/pages/about.html">About Us</a>
@@ -170,5 +137,53 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="/assets/script/slick.js"></script>
 <script src="/assets/script/index.js"></script>
+<script>
+ $('.store-slide').slick({
+  infinite: true,
+  slidesToShow: 4,
+  slidesToScroll: 3,
+  arrows: false,
+  centerMode: true,
+  centerPadding: '10px',
+  autoPlay:true,
+  responsive: [
+    {
+      breakpoint: 1076,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        dots: true,
+        arrows:false
+      }
+    },
+    {
+      breakpoint: 820,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 3
+      }
+    },
+    {
+      breakpoint: 542,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2,
+        centerMode: true
+      }
+    },
+    {
+      breakpoint: 430,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 3,
+        centerMode: true
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+});
+</script>
 </body>
 </html>
