--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -83,6 +83,33 @@
       </section>
       <section>
           <h3 class="h3-display">store</h3>
+          <ul>
+              <li class="store-li">
+                  <div class="li-main-div">
+                      <aside>
+                          <img src="/assets/images/store/honey.png" alt="">
+                      </aside>
+                     <article>
+                           <h4>Item name</h4>
+                           <p>Description</p>
+                            <div>
+                                <span class="step">+</span>
+                                <span>0</span>
+                                <span class="step">-</span>
+                            </div>
+                     </article>
+                  </div>
+                  <div>
+                    <p>$ 20</p>
+                  </div>
+                  <div class="purchase-div">
+                     <a href="#" class="buy">Buy</a>
+                     <aside class="rating">
+                        <img src="/assets/images/store/star-rating.png" alt="" class="rating">
+                     </aside>
+                  </div>
+              </li>
+          </ul>
       </section>
     </main>
    <footer >
@@ -166,19 +193,19 @@
     {
       breakpoint: 542,
       settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2,
+        slidesToShow: 1,
+        slidesToScroll: 1,
         centerMode: true
       }
     },
-    {
-      breakpoint: 430,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 3,
-        centerMode: true
-      }
-    }
+    // {
+    //   breakpoint: 430,
+    //   settings: {
+    //     slidesToShow: 1,
+    //     slidesToScroll: 3,
+    //     centerMode: true
+    //   }
+    // }
     // You can unslick at a given breakpoint now by adding:
     // settings: "unslick"
     // instead of a settings object
