added mobile for list item

--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -63,6 +63,12 @@
             </div>
         </nav>
     </header>
+    <section class="search-item">
+        <input type="search" name="" id="" placeholder="search">
+        <div>
+            <img src="/assets/images/store/search.png" alt="">
+        </div>
+    </section>
     <main>
       <section class="store-slide">
           <div class="store-div">
@@ -105,10 +111,13 @@
                   <div class="purchase-div">
                      <a href="#" class="buy">Buy</a>
                      <aside class="rating">
+                         
                         <img src="/assets/images/store/star-rating.png" alt="" class="rating">
+                        <!-- <img src="/assets/images/store/Vector.svg" alt="" class="rating"> -->
                      </aside>
                   </div>
               </li>
+              
           </ul>
       </section>
     </main>
