added add image

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -125,7 +125,7 @@
     </main>
     <div class="shop-btn" data-aos="fade-up" data-aos-easing="linear">
         <aside>
-            
+           <img src="/assets/images/web ad 1.png" alt=" "> 
         </aside>
         <a href="#" class="btn btn-explore">
             Explore
