--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -112,7 +112,7 @@
     </main>
     <div class="shop-btn" >
         <aside>
-            
+            <img src="/assets/images/web ad 1.png" alt="">
         </aside>
         <!-- <a href="#" class="btn btn-explore">
             Explore
