--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="food,food store">
     <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
     <!-- Google Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
+        
+    <!--
     <link rel="stylesheet" href="/assets/styles/indexHome.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -50,7 +51,7 @@
     </style>
 </head>
 <body>
-    <header class="" >
+    <header class="" data-aos="fade-down" data-aos-easing="linear">
         <nav class="container" >
             <div class="logo">
                  <img src="/assets/images/logo.svg" alt="">
@@ -91,7 +92,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main data-aos="fade-up" data-aos-easing="linear">
        <section class="about-banner">
             <h1>
                 About Us
@@ -110,7 +111,7 @@
             </p>
        </section>
     </main>
-    <div class="shop-btn" >
+    <div class="shop-btn" data-aos="fade-down" data-aos-easing="linear">
         <aside>
             <img src="/assets/images/web ad 1.png" alt="">
         </aside>
@@ -170,5 +171,8 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="/assets/script/slick.js"></script>
 <script src="/assets/script/index.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
