--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="food,food store">
     <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
     <!-- Google Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
     
+    <!-- 
     <link rel="stylesheet" href="/assets/styles/indexHome.css"> -->
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
