--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="food,food store">
     <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
     <!-- Google Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
     
+    <!-- 
     <link rel="stylesheet" href="/assets/styles/indexHome.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -22,7 +23,7 @@
     <link rel="stylesheet" href="/assets/styles/store.css">
 </head>
 <body>
-    <header class="" >
+    <header class="" data-aos="fade-down" data-aos-easing="linear">
         <nav class="container" >
             <div class="logo">
                  <img src="/assets/images/logo.svg" alt="">
@@ -63,7 +64,7 @@
             </div>
         </nav>
     </header>
-    <section class="search-item">
+    <section class="search-item" data-aos="fade-up" data-aos-easing="linear">
         <input type="search" name="" id="" placeholder="search">
         <div>
             <img src="/assets/images/store/search.png" alt="">
@@ -90,7 +91,7 @@
       <section>
           <h3 class="h3-display">store</h3>
           <ul>
-              <li class="store-li">
+              <li class="store-li" data-aos="fade-up" data-aos-easing="linear">
                   <div class="li-main-div">
                       <aside>
                           <img src="/assets/images/store/honey.png" alt="">
@@ -188,7 +189,7 @@
       settings: {
         slidesToShow: 3,
         slidesToScroll: 3,
-        dots: true,
+        dots: false,
         arrows:false
       }
     },
@@ -207,19 +208,10 @@
         centerMode: true
       }
     },
-    // {
-    //   breakpoint: 430,
-    //   settings: {
-    //     slidesToShow: 1,
-    //     slidesToScroll: 3,
-    //     centerMode: true
-    //   }
-    // }
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
+   
   ]
 });
+AOS.init();
 </script>
 </body>
 </html>
