added aos to about and store pages

--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -118,7 +118,33 @@
                      </aside>
                   </div>
               </li>
-              
+              <li class="store-li" data-aos="fade-up" data-aos-easing="linear">
+                <div class="li-main-div">
+                    <aside>
+                        <img src="/assets/images/store/honey.png" alt="">
+                    </aside>
+                   <article>
+                         <h4>Item name</h4>
+                         <p>Description</p>
+                          <div>
+                              <span class="step">+</span>
+                              <span>0</span>
+                              <span class="step">-</span>
+                          </div>
+                   </article>
+                </div>
+                <div>
+                  <p>$ 20</p>
+                </div>
+                <div class="purchase-div">
+                   <a href="#" class="buy">Buy</a>
+                   <aside class="rating">
+                       
+                      <img src="/assets/images/store/star-rating.png" alt="" class="rating">
+                      <!-- <img src="/assets/images/store/Vector.svg" alt="" class="rating"> -->
+                   </aside>
+                </div>
+            </li>
           </ul>
       </section>
     </main>
