--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -42,7 +42,7 @@
                   <li>
                       <a href="#">Contact Us</a>
                   </li>
-                  <li class="account"><a href="#">
+                  <li class="account"><a href="/assets/pages/signup.html">
                     <div>
                       <img src="/assets/images/profile-img/account-icon.svg" alt="">
                     </div>
