--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <li><a href="/assets/pages/products.html">Store</a></li>
                <li><a href="/assets/pages/about.html">About Us</a></li>
                <li><a href="/assets/pages/explore.html">Contact Us</a></li>
-               <li class="account"><a href="#">
+               <li class="account"><a href="/assets/pages/signup.html">
                    <span>
                      <img src="/assets/images/profile-img/account-icon.svg" alt="">
                    </span>
