completed signup page

--- a/assets/pages/signup.html
+++ b/assets/pages/signup.html
@@ -97,7 +97,12 @@
             </form>
  
     </main>
-    
+    <div>
+        <p>
+             <span>Already Have an Accoun?</span>
+             <span><a href="#">Log in</a></span>
+        </p>
+    </div>
    <footer >
     <section class="footer-top">
      <div class="footer-logo">
