--- a/assets/pages/store.html
+++ b/assets/pages/store.html
@@ -40,7 +40,7 @@
                       <a href="/assets/pages/about.html">About Us</a>
                   </li>
                   <li>
-                      <a href="#">Contact Us</a>
+                      <a href="/assets/pages/contact.html">Contact Us</a>
                   </li>
                   <li class="account"><a href="/assets/pages/signup.html">
                     <div>
@@ -164,7 +164,7 @@
          <a href="/assets/pages/about.html">About Us</a>
         </li>
         <li>
-         <a href="#">Contact Us</a>
+         <a href="/assets/pages/contact.html">Contact Us</a>
         </li>
      </ul>
     </section>
