--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <span></span>
             </li>
                <li><a href="/assets/pages/home.html">Home</a></li>
-               <li><a href="/assets/pages/products.html">Store</a></li>
+               <li><a href="/assets/pages/store.html">Store</a></li>
                <li><a href="/assets/pages/about.html">About Us</a></li>
-               <li><a href="/assets/pages/explore.html">Contact Us</a></li>
+               <li><a href="/assets/pages/contact.html">Contact Us</a></li>
                <li class="account"><a href="/assets/pages/signup.html">
                    <span>
                      <img src="/assets/images/profile-img/account-icon.svg" alt="">
@@ -54,7 +54,7 @@
                    </a>
                 </li>
                 <li>
-                    <a href="/assets/pages/explore.html">
+                    <a href="#">
                     <img src="/assets/images/cart-icon.svg" alt="">
                     </a>
                 </li>
