--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -68,7 +68,7 @@
                       <a href="#">About Us</a>
                   </li>
                   <li>
-                      <a href="#">Contact Us</a>
+                      <a href="/assets/pages/contact.html">Contact Us</a>
                   </li>
                   <li class="account"><a href="/assets/pages/signup.html">
                     <div>
@@ -135,7 +135,7 @@
          <a href="/assets/pages/about.html">About Us</a>
         </li>
         <li>
-         <a href="#">Contact Us</a>
+         <a href="/assets/pages/contact.html">Contact Us</a>
         </li>
      </ul>
     </section>
