--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -42,7 +42,7 @@
                   <li>
                       <a href="#">Contact Us</a>
                   </li>
-                  <li class="account"><a href="#">
+                  <li class="account"><a href="/assets/pages/signup.html">
                     <div>
                       <img src="/assets/images/profile-img/account-icon.svg" alt="">
                     </div>
@@ -97,7 +97,7 @@
                         Victoria Island, Lagos, Nigeria.
                     </p>
                 </li>
-                <li data-aos="fade-up" data-aos-easing="linear" data-aos-offset="500"
+                <li data-aos="fade-up" data-aos-easing="linear" 
                 data-aos-duration="500">
                     <div>
                        <img src="/assets/images/contact/tel.png" alt=" ">
