added contact page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <li>
                     <a href="#">
-                    <img src="/assets/images/cart-icon.svg" alt="">
+                    <img src="/assets/images/nav-cart.svg" alt="">
                     </a>
                 </li>
            </ul>
