--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -73,6 +73,7 @@
     }
     .track-progress{
         width: 800px;
+        margin: 10px auto;
     }
     .track-progress progress{
         width: 100%;
