completed mobile view for dashboard

--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -120,6 +120,9 @@
         margin: 50px 0;
     }
     @media screen and (max-width:810px){
+        main > h3{
+            font-size: 30px;
+        }
         .track-order{
             padding: 5px 15px;
         }
@@ -129,7 +132,11 @@
         .progress-info span{
             font-size: 14px;
         }
+        main>section{
+            padding: 0 10px;
+        }
         main ul{
+            width: auto;
             flex-direction: column;
         }
     }
