--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -8,12 +8,10 @@
     <meta name="keywords" content="food,food store">
     <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
     <!-- Google Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
-     -->
-    <!-- 
-    <link rel="stylesheet" href="/assets/styles/indexHome.css"> -->
+    
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
     <!-- <link rel="stylesheet" href="/assets/styles/slick-theme.css">
@@ -100,7 +98,7 @@
         align-items: center;
     }
  
-    progress[value]::-moz-progress-bar{
+    progress[value]::-moz-progress-bar,progress[value]::-webkit-progress-bar{
         background-color: #FF0707;
         border-radius: 15px;
     }
