--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -97,9 +97,30 @@
         justify-content: space-between;
         align-items: center;
     }
- 
-    progress[value]::-moz-progress-bar,progress[value]::-webkit-progress-bar{
+  
+ progress{
+     position: relative;
+     display: inline-block;
+     appearance: none;
+     border-radius: 15px;
+ }
+ progress::before{
+     content: '';
+     position: absolute;
+     top: 0;
+     left: 0;
+     background-color: #FF0707;
+     z-index: 10;
+     display: inline-block;
+     width: 32%;
+     height: 100%;
+     border-radius: 15px;
+ }
+    progress[value]::-moz-progress-bar,
+    progress[value]::-webkit-progress-value,
+    progress::-webkit-progress-value{
         background-color: #FF0707;
+        color: #FF0707;
         border-radius: 15px;
     }
     .progress-info span{
