completed mobile view for dashboard

--- a/assets/pages/dashboard.html
+++ b/assets/pages/dashboard.html
@@ -98,7 +98,7 @@
       <section>
         <aside class="track-order">
              <p> Track Order</p>
-             <div class="track-progress">
+             <div class="track-progress hidden">
                 <progress id="file" value="32" max="100"> </progress>
                 <div class="progress-info">
                     <span class="status">Paid</span>
